# my-first-ai-agent

./: .gitignore  README.md  pyproject.toml
src/: requirements.txt
src/my_ai_agent/: cat_agent.py  telegram.py
src/my_first_ai_agent/: __init__.py  cat_agent.py  lambda_function.py  telegram.py  tools.py
terraform/: main.tf  terraform.tfstate
